--- a/Challenge With Thomas Nine.ipynb
+++ b/Challenge With Thomas Nine.ipynb
@@ -1963,7 +1963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1979,29 +1979,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Combine each Series for average math scores by school into single data frame.\n",
     "math_scores_by_school_df = average_math_scores.unstack()\n",
-    "math_scores_by_school_df = math_scores_by_school_df[[\"9th\",\"10th\",\"11th\",\"12th\"]]"
+    "math_scores_by_school_df = math_scores_by_school_df[[\"9th\",\"10th\",\"11th\",\"12th\"]]\n",
+    "math_scores_by_school_df.loc['Average (All Schools)'] = math_scores_by_school_df.mean(axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Combine each Series for average reading scores by school into single data frame.\n",
     "reading_scores_by_school_df = average_reading_scores.unstack()\n",
-    "reading_scores_by_school_df = reading_scores_by_school_df[[\"9th\",\"10th\",\"11th\",\"12th\"]]"
+    "reading_scores_by_school_df = reading_scores_by_school_df[[\"9th\",\"10th\",\"11th\",\"12th\"]]\n",
+    "reading_scores_by_school_df.loc['Average (All Schools)'] = reading_scores_by_school_df.mean(axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2014,7 +2016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -2166,6 +2168,14 @@
        "      <td>83.84</td>\n",
        "      <td>83.64</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Average (All Schools)</td>\n",
+       "      <td>80.35</td>\n",
+       "      <td>80.38</td>\n",
+       "      <td>80.58</td>\n",
+       "      <td>80.42</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -2186,10 +2196,11 @@
        "11    Shelton High School  83.42  82.92  83.38  83.78\n",
        "12     Thomas High School  83.59  83.09  83.50  83.50\n",
        "13     Wilson High School  83.09  83.72  83.20  83.04\n",
-       "14     Wright High School  83.26  84.01  83.84  83.64"
+       "14     Wright High School  83.26  84.01  83.84  83.64\n",
+       "15  Average (All Schools)  80.35  80.38  80.58  80.42"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2205,7 +2216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -2357,6 +2368,14 @@
        "      <td>84.16</td>\n",
        "      <td>84.07</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Average (All Schools)</td>\n",
+       "      <td>82.51</td>\n",
+       "      <td>82.51</td>\n",
+       "      <td>82.56</td>\n",
+       "      <td>82.55</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -2377,10 +2396,11 @@
        "11    Shelton High School  84.12  83.44  84.37  82.78\n",
        "12     Thomas High School  83.73  84.25  83.59  83.83\n",
        "13     Wilson High School  83.94  84.02  83.76  84.32\n",
-       "14     Wright High School  83.83  83.81  84.16  84.07"
+       "14     Wright High School  83.83  83.81  84.16  84.07\n",
+       "15  Average (All Schools)  82.51  82.51  82.56  82.55"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2403,7 +2423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -2429,7 +2449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2447,7 +2467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -2546,7 +2566,7 @@
        ">=\\$646                              53.526855  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2565,7 +2585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -2657,7 +2677,7 @@
        ">=\\$646                                 66                81                54  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2680,7 +2700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -2737,7 +2757,7 @@
        "      <td>66.680064</td>\n",
        "      <td>81.933280</td>\n",
        "      <td>54.642283</td>\n",
-       "      <td>$616-$645</td>\n",
+       "      <td>\\$616-\\$645</td>\n",
        "      <td>Large(&gt;2000)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2751,7 +2771,7 @@
        "      <td>94.133477</td>\n",
        "      <td>97.039828</td>\n",
        "      <td>91.334769</td>\n",
-       "      <td>&lt;=$585</td>\n",
+       "      <td>&lt;=\\$585</td>\n",
        "      <td>Medium(1001-2000)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2765,7 +2785,7 @@
        "      <td>65.988471</td>\n",
        "      <td>80.739234</td>\n",
        "      <td>53.204476</td>\n",
-       "      <td>$616-$645</td>\n",
+       "      <td>\\$616-\\$645</td>\n",
        "      <td>Large(&gt;2000)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2779,7 +2799,7 @@
        "      <td>68.309602</td>\n",
        "      <td>79.299014</td>\n",
        "      <td>54.289887</td>\n",
-       "      <td>$616-$645</td>\n",
+       "      <td>\\$616-\\$645</td>\n",
        "      <td>Large(&gt;2000)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -2793,7 +2813,7 @@
        "      <td>93.392371</td>\n",
        "      <td>97.138965</td>\n",
        "      <td>90.599455</td>\n",
-       "      <td>$616-$645</td>\n",
+       "      <td>\\$616-\\$645</td>\n",
        "      <td>Medium(1001-2000)</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2830,14 +2850,14 @@
        "Griffin High School           97.138965          90.599455   \n",
        "\n",
        "                     Spending Ranges Per Student        School Size  \n",
-       "Bailey High School                     $616-$645       Large(>2000)  \n",
-       "Cabrera High School                       <=$585  Medium(1001-2000)  \n",
-       "Figueroa High School                   $616-$645       Large(>2000)  \n",
-       "Ford High School                       $616-$645       Large(>2000)  \n",
-       "Griffin High School                    $616-$645  Medium(1001-2000)  "
+       "Bailey High School                   \\$616-\\$645       Large(>2000)  \n",
+       "Cabrera High School                      <=\\$585  Medium(1001-2000)  \n",
+       "Figueroa High School                 \\$616-\\$645       Large(>2000)  \n",
+       "Ford High School                     \\$616-\\$645       Large(>2000)  \n",
+       "Griffin High School                  \\$616-\\$645  Medium(1001-2000)  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2857,7 +2877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2875,7 +2895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 63,
    "metadata": {
     "scrolled": true
    },
@@ -2959,7 +2979,7 @@
        "Large(>2000)               82.766634          58.286003  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2978,7 +2998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -3060,7 +3080,7 @@
        "Large(>2000)                     83                58  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3083,7 +3103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3101,7 +3121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -3173,7 +3193,7 @@
        "District             80.799062          53.672208  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3192,7 +3212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -3264,7 +3284,7 @@
        "District                   81                54  "
       ]
      },
-     "execution_count": 46,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
