--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -1963,7 +1963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1979,29 +1979,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Combine each Series for average math scores by school into single data frame.\n",
     "math_scores_by_school_df = average_math_scores.unstack()\n",
-    "math_scores_by_school_df = math_scores_by_school_df[[\"9th\",\"10th\",\"11th\",\"12th\"]]"
+    "math_scores_by_school_df = math_scores_by_school_df[[\"9th\",\"10th\",\"11th\",\"12th\"]]\n",
+    "math_scores_by_school_df.loc['Average (All Schools)'] = math_scores_by_school_df.mean(axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Combine each Series for average reading scores by school into single data frame.\n",
     "reading_scores_by_school_df = average_reading_scores.unstack()\n",
-    "reading_scores_by_school_df = reading_scores_by_school_df[[\"9th\",\"10th\",\"11th\",\"12th\"]]"
+    "reading_scores_by_school_df = reading_scores_by_school_df[[\"9th\",\"10th\",\"11th\",\"12th\"]]\n",
+    "reading_scores_by_school_df.loc['Average (All Schools)'] = reading_scores_by_school_df.mean(axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2014,7 +2016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -2166,6 +2168,14 @@
        "      <td>83.84</td>\n",
        "      <td>83.64</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Average (All Schools)</td>\n",
+       "      <td>80.12</td>\n",
+       "      <td>80.38</td>\n",
+       "      <td>80.58</td>\n",
+       "      <td>80.42</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -2186,10 +2196,11 @@
        "11    Shelton High School  83.42  82.92  83.38  83.78\n",
        "12     Thomas High School    nan  83.09  83.50  83.50\n",
        "13     Wilson High School  83.09  83.72  83.20  83.04\n",
-       "14     Wright High School  83.26  84.01  83.84  83.64"
+       "14     Wright High School  83.26  84.01  83.84  83.64\n",
+       "15  Average (All Schools)  80.12  80.38  80.58  80.42"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2205,7 +2216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -2357,6 +2368,14 @@
        "      <td>84.16</td>\n",
        "      <td>84.07</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Average (All Schools)</td>\n",
+       "      <td>82.43</td>\n",
+       "      <td>82.51</td>\n",
+       "      <td>82.56</td>\n",
+       "      <td>82.55</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -2377,10 +2396,11 @@
        "11    Shelton High School  84.12  83.44  84.37  82.78\n",
        "12     Thomas High School    nan  84.25  83.59  83.83\n",
        "13     Wilson High School  83.94  84.02  83.76  84.32\n",
-       "14     Wright High School  83.83  83.81  84.16  84.07"
+       "14     Wright High School  83.83  83.81  84.16  84.07\n",
+       "15  Average (All Schools)  82.43  82.51  82.56  82.55"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2403,7 +2423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -2429,7 +2449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2447,7 +2467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -2546,7 +2566,7 @@
        ">=\\$646                              53.526855  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2565,7 +2585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -2657,7 +2677,7 @@
        ">=\\$646                                 66                81                54  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2680,7 +2700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -2837,7 +2857,7 @@
        "Griffin High School                  \\$616-\\$645  Medium(1001-2000)  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2857,7 +2877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2875,7 +2895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 105,
    "metadata": {
     "scrolled": true
    },
@@ -2959,7 +2979,7 @@
        "Large(>2000)               82.766634          58.286003  "
       ]
      },
-     "execution_count": 88,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2978,7 +2998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -3060,7 +3080,7 @@
        "Large(>2000)                     83                58  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3083,7 +3103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3101,7 +3121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -3173,7 +3193,7 @@
        "District             80.799062          53.672208  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3192,7 +3212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -3264,7 +3284,7 @@
        "District                   81                54  "
       ]
      },
-     "execution_count": 92,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
