--- a/Challenge Baseline.ipynb
+++ b/Challenge Baseline.ipynb
@@ -602,14 +602,14 @@
    "source": [
     "# Step 1. Get the number of students that are in ninth grade at Thomas High School.\n",
     "# These students have no grades. \n",
-    "ninth_graders_Thomas_School_count = school_data_complete_df.loc[(school_data_complete_df[\"grade\"] == \"9th\") & (school_data_complete_df[\"school_name\"] == \"Thomas High School\")].count()[\"Student ID\"]\n",
+    "#ninth_graders_Thomas_School_count = school_data_complete_df.loc[(school_data_complete_df[\"grade\"] == \"9th\") & (school_data_complete_df[\"school_name\"] == \"Thomas High School\")].count()[\"Student ID\"]\n",
     "\n",
     "# Get the total student count \n",
     "student_count = school_data_complete_df[\"Student ID\"].count()\n",
     "\n",
     "# Step 2. Subtract the number of students that are in ninth grade at \n",
     "# Thomas High School from the total student count to get the new total student count.\n",
-    "new_total_student_count = student_count - ninth_graders_Thomas_School_count"
+    "#new_total_student_count = student_count - ninth_graders_Thomas_School_count"
    ]
   },
   {
@@ -630,8 +630,8 @@
    "outputs": [],
    "source": [
     "# Step 3. Calculate the passing percentages with the new total student count.\n",
-    "passing_math_percentage = (passing_math_count / new_total_student_count) * 100\n",
-    "passing_reading_percentage = (passing_reading_count / new_total_student_count) * 100"
+    "passing_math_percentage = (passing_math_count / student_count) * 100\n",
+    "passing_reading_percentage = (passing_reading_count / student_count) * 100"
    ]
   },
   {
@@ -647,7 +647,7 @@
     "overall_passing_math_reading_count = passing_math_reading[\"student_name\"].count()\n",
     "\n",
     "# Step 4.Calculate the overall passing percentage with new total student count.\n",
-    "overall_passing_percentage = (overall_passing_math_reading_count / new_total_student_count) * 100"
+    "overall_passing_percentage = (overall_passing_math_reading_count / student_count) * 100"
    ]
   },
   {
@@ -694,9 +694,9 @@
        "      <td>$24,649,428.00</td>\n",
        "      <td>79.0</td>\n",
        "      <td>81.9</td>\n",
-       "      <td>75.9</td>\n",
-       "      <td>86.8</td>\n",
-       "      <td>65.9</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>85.8</td>\n",
+       "      <td>65.2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -707,7 +707,7 @@
        "0             15         39,170  $24,649,428.00               79.0   \n",
        "\n",
        "  Average Reading Score % Passing Math % Passing Reading % Overall Passing  \n",
-       "0                  81.9           75.9              86.8              65.9  "
+       "0                  81.9           75.0              85.8              65.2  "
       ]
      },
      "execution_count": 13,
@@ -1262,7 +1262,7 @@
    "outputs": [],
    "source": [
     "# Step 5.  Get the number of 10th-12th graders from Thomas High School (THS).\n",
-    "number_THS_10_to_12 = school_data_complete_df[(school_data_complete_df[\"school_name\"] == \"Thomas High School\") & (school_data_complete_df[\"grade\"] != \"9th\")].count()[\"Student ID\"]\n",
+    "number_THS_10_to_12 = school_data_complete_df[(school_data_complete_df[\"school_name\"] == \"Thomas High School\")].count()[\"Student ID\"]\n",
     "# Alternate: count the number of non null math scores in Thomas High school\n",
     "# number_THS_10_to_12 = school_data_complete_df[(school_data_complete_df[\"school_name\"] == \"Thomas High School\")].count()[\"math_score\"]"
    ]
@@ -1547,9 +1547,9 @@
        "      <td>$638.00</td>\n",
        "      <td>83.418349</td>\n",
        "      <td>83.848930</td>\n",
-       "      <td>129.897785</td>\n",
-       "      <td>135.519591</td>\n",
-       "      <td>126.660988</td>\n",
+       "      <td>93.272171</td>\n",
+       "      <td>97.308869</td>\n",
+       "      <td>90.948012</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Wilson High School</th>\n",
@@ -1627,7 +1627,7 @@
        "Pena High School                   84.044699       94.594595   \n",
        "Rodriguez High School              80.744686       66.366592   \n",
        "Shelton High School                83.725724       93.867121   \n",
-       "Thomas High School                 83.848930      129.897785   \n",
+       "Thomas High School                 83.848930       93.272171   \n",
        "Wilson High School                 83.989488       93.867718   \n",
        "Wright High School                 83.955000       93.333333   \n",
        "\n",
@@ -1644,7 +1644,7 @@
        "Pena High School               95.945946          90.540541  \n",
        "Rodriguez High School          80.220055          52.988247  \n",
        "Shelton High School            95.854628          89.892107  \n",
-       "Thomas High School            135.519591         126.660988  \n",
+       "Thomas High School             97.308869          90.948012  \n",
        "Wilson High School             96.539641          90.582567  \n",
        "Wright High School             96.611111          90.333333  "
       ]
@@ -1707,18 +1707,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Thomas High School</th>\n",
-       "      <td>Charter</td>\n",
-       "      <td>1635</td>\n",
-       "      <td>$1,043,130.00</td>\n",
-       "      <td>$638.00</td>\n",
-       "      <td>83.418349</td>\n",
-       "      <td>83.848930</td>\n",
-       "      <td>129.897785</td>\n",
-       "      <td>135.519591</td>\n",
-       "      <td>126.660988</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>Cabrera High School</th>\n",
        "      <td>Charter</td>\n",
        "      <td>1858</td>\n",
@@ -1729,6 +1717,18 @@
        "      <td>94.133477</td>\n",
        "      <td>97.039828</td>\n",
        "      <td>91.334769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>$1,043,130.00</td>\n",
+       "      <td>$638.00</td>\n",
+       "      <td>83.418349</td>\n",
+       "      <td>83.848930</td>\n",
+       "      <td>93.272171</td>\n",
+       "      <td>97.308869</td>\n",
+       "      <td>90.948012</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Griffin High School</th>\n",
@@ -1772,29 +1772,29 @@
       ],
       "text/plain": [
        "                    School Type  Total Students Total School Budget  \\\n",
-       "Thomas High School      Charter            1635       $1,043,130.00   \n",
        "Cabrera High School     Charter            1858       $1,081,356.00   \n",
+       "Thomas High School      Charter            1635       $1,043,130.00   \n",
        "Griffin High School     Charter            1468         $917,500.00   \n",
        "Wilson High School      Charter            2283       $1,319,574.00   \n",
        "Pena High School        Charter             962         $585,858.00   \n",
        "\n",
        "                    Per Student Budget  Average Math Score  \\\n",
-       "Thomas High School             $638.00           83.418349   \n",
        "Cabrera High School            $582.00           83.061895   \n",
+       "Thomas High School             $638.00           83.418349   \n",
        "Griffin High School            $625.00           83.351499   \n",
        "Wilson High School             $578.00           83.274201   \n",
        "Pena High School               $609.00           83.839917   \n",
        "\n",
        "                     Average Reading Score  % Passing Math  % Passing Reading  \\\n",
-       "Thomas High School               83.848930      129.897785         135.519591   \n",
        "Cabrera High School              83.975780       94.133477          97.039828   \n",
+       "Thomas High School               83.848930       93.272171          97.308869   \n",
        "Griffin High School              83.816757       93.392371          97.138965   \n",
        "Wilson High School               83.989488       93.867718          96.539641   \n",
        "Pena High School                 84.044699       94.594595          95.945946   \n",
        "\n",
        "                     % Overall Passing  \n",
-       "Thomas High School          126.660988  \n",
        "Cabrera High School          91.334769  \n",
+       "Thomas High School           90.948012  \n",
        "Griffin High School          90.599455  \n",
        "Wilson High School           90.582567  \n",
        "Pena High School             90.540541  "
@@ -2527,9 +2527,9 @@
        "      <th>\\$616-\\$645</th>\n",
        "      <td>79.079225</td>\n",
        "      <td>81.891436</td>\n",
-       "      <td>81.772481</td>\n",
-       "      <td>92.475023</td>\n",
-       "      <td>72.064223</td>\n",
+       "      <td>75.668212</td>\n",
+       "      <td>86.106569</td>\n",
+       "      <td>66.112060</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>&gt;=\\$646</th>\n",
@@ -2555,14 +2555,14 @@
        "Spending Ranges Per Student                                      \n",
        "<=\\$585                           93.460096          96.610877   \n",
        "\\$586-\\$615                       94.230858          95.900287   \n",
-       "\\$616-\\$645                       81.772481          92.475023   \n",
+       "\\$616-\\$645                       75.668212          86.106569   \n",
        ">=\\$646                           66.164813          81.133951   \n",
        "\n",
        "                             % Overall Passing  \n",
        "Spending Ranges Per Student                     \n",
        "<=\\$585                              90.369459  \n",
        "\\$586-\\$615                          90.216324  \n",
-       "\\$616-\\$645                          72.064223  \n",
+       "\\$616-\\$645                          66.112060  \n",
        ">=\\$646                              53.526855  "
       ]
      },
@@ -2645,9 +2645,9 @@
        "      <th>\\$616-\\$645</th>\n",
        "      <td>79.1</td>\n",
        "      <td>81.9</td>\n",
-       "      <td>82</td>\n",
-       "      <td>92</td>\n",
-       "      <td>72</td>\n",
+       "      <td>76</td>\n",
+       "      <td>86</td>\n",
+       "      <td>66</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>&gt;=\\$646</th>\n",
@@ -2673,7 +2673,7 @@
        "Spending Ranges Per Student                                                     \n",
        "<=\\$585                                 93                97                90  \n",
        "\\$586-\\$615                             94                96                90  \n",
-       "\\$616-\\$645                             82                92                72  \n",
+       "\\$616-\\$645                             76                86                66  \n",
        ">=\\$646                                 66                81                54  "
       ]
      },
@@ -2949,9 +2949,9 @@
        "      <th>Medium(1001-2000)</th>\n",
        "      <td>83.374684</td>\n",
        "      <td>83.864438</td>\n",
-       "      <td>100.924817</td>\n",
-       "      <td>104.432825</td>\n",
-       "      <td>97.764130</td>\n",
+       "      <td>93.599695</td>\n",
+       "      <td>96.790680</td>\n",
+       "      <td>90.621535</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Large(&gt;2000)</th>\n",
@@ -2969,13 +2969,13 @@
        "                   Average Math Score  Average Reading Score  % Passing Math  \\\n",
        "School Size                                                                    \n",
        "Small(<=1000)               83.821598              83.929843       93.550225   \n",
-       "Medium(1001-2000)           83.374684              83.864438      100.924817   \n",
+       "Medium(1001-2000)           83.374684              83.864438       93.599695   \n",
        "Large(>2000)                77.746417              81.344493       69.963361   \n",
        "\n",
        "                   % Passing Reading  % Overall Passing  \n",
        "School Size                                              \n",
        "Small(<=1000)              96.099437          89.883853  \n",
-       "Medium(1001-2000)         104.432825          97.764130  \n",
+       "Medium(1001-2000)          96.790680          90.621535  \n",
        "Large(>2000)               82.766634          58.286003  "
       ]
      },
@@ -3050,9 +3050,9 @@
        "      <th>Medium(1001-2000)</th>\n",
        "      <td>83.4</td>\n",
        "      <td>83.9</td>\n",
-       "      <td>101</td>\n",
-       "      <td>104</td>\n",
-       "      <td>98</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>91</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Large(&gt;2000)</th>\n",
@@ -3070,13 +3070,13 @@
        "                  Average Math Score Average Reading Score % Passing Math  \\\n",
        "School Size                                                                 \n",
        "Small(<=1000)                   83.8                  83.9             94   \n",
-       "Medium(1001-2000)               83.4                  83.9            101   \n",
+       "Medium(1001-2000)               83.4                  83.9             94   \n",
        "Large(>2000)                    77.7                  81.3             70   \n",
        "\n",
        "                  % Passing Reading % Overall Passing  \n",
        "School Size                                            \n",
        "Small(<=1000)                    96                90  \n",
-       "Medium(1001-2000)               104                98  \n",
+       "Medium(1001-2000)                97                91  \n",
        "Large(>2000)                     83                58  "
       ]
      },
@@ -3165,9 +3165,9 @@
        "      <th>Charter</th>\n",
        "      <td>83.473852</td>\n",
        "      <td>83.896421</td>\n",
-       "      <td>98.199032</td>\n",
-       "      <td>101.362830</td>\n",
-       "      <td>94.896366</td>\n",
+       "      <td>93.620830</td>\n",
+       "      <td>96.586489</td>\n",
+       "      <td>90.432244</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>District</th>\n",
@@ -3184,12 +3184,12 @@
       "text/plain": [
        "             Average Math Score  Average Reading Score  % Passing Math  \\\n",
        "School Type                                                              \n",
-       "Charter               83.473852              83.896421       98.199032   \n",
+       "Charter               83.473852              83.896421       93.620830   \n",
        "District              76.956733              80.966636       66.548453   \n",
        "\n",
        "             % Passing Reading  % Overall Passing  \n",
        "School Type                                        \n",
-       "Charter             101.362830          94.896366  \n",
+       "Charter              96.586489          90.432244  \n",
        "District             80.799062          53.672208  "
       ]
      },
@@ -3256,9 +3256,9 @@
        "      <th>Charter</th>\n",
        "      <td>83.5</td>\n",
        "      <td>83.9</td>\n",
-       "      <td>98</td>\n",
-       "      <td>101</td>\n",
-       "      <td>95</td>\n",
+       "      <td>94</td>\n",
+       "      <td>97</td>\n",
+       "      <td>90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>District</th>\n",
@@ -3275,12 +3275,12 @@
       "text/plain": [
        "            Average Math Score Average Reading Score % Passing Math  \\\n",
        "School Type                                                           \n",
-       "Charter                   83.5                  83.9             98   \n",
+       "Charter                   83.5                  83.9             94   \n",
        "District                  77.0                  81.0             67   \n",
        "\n",
        "            % Passing Reading % Overall Passing  \n",
        "School Type                                      \n",
-       "Charter                   101                95  \n",
+       "Charter                    97                90  \n",
        "District                   81                54  "
       ]
      },
